turtleart.lessons.turtleart.Main.SmallSquare.scala.error
Source:3: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
		avance();
                      ^Source:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
		droite();
                      ^