turtleart.lessons.turtleart.Main.SmallSquare.scala.code
override def run() {
	for (a<-1 to 4) {
		avance();
		droite();
	}
}
